fixed error message from being stuck permenently on the form

--- a/WebFrontend/wwwroot/css/login.css
+++ b/WebFrontend/wwwroot/css/login.css
@@ -214,6 +214,9 @@ button:focus{
 #text-danger-reset{
     left:35%;
 }
+.model-message{
+    left:10%;
+}
 
 /*Tooltip properties*/
 .password-tooltip {
